# sea-me-hackathon-2024

./: README.md
control/: CMakeLists.txt  package.xml
control/scripts/: actuator.py  emergency_stop.py  teleop.py
demo/: CMakeLists.txt  package.xml
demo/scripts/: demo.py  manual_control.py
jetracer/jetracer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
jetracer/notebooks/: basic_motion.ipynb  interactive_regression.ipynb  road_following.ipynb  teleoperation.ipynb
jetracer/notebooks/.ipynb_checkpoints/: road_following-checkpoint.ipynb  teleoperation-checkpoint.ipynb
opencv_test/: CMakeLists.txt  package.xml
opencv_test/src/: opencv_test.cpp
todo/: CMakeLists.txt  package.xml
todo/src/: todo.cpp
ultrasonic_ros/: ultrasonic_ros.ino
